force-app/main/default/objects/Case/fields/Pipeline__c.field-meta.xml
<CustomField>
    <fullName>Pipeline__c</fullName>
    <label>Pipeline</label>
    <referenceTo>Pipeline__c</referenceTo>
    <relationshipName>Case_Pipeline</relationshipName>
    <type>Lookup</type>
</CustomField>