force-app/main/default/objects/Case/fields/Regulatory_Reportable__c.field-meta.xml
<CustomField>
    <fullName>Regulatory_Reportable__c</fullName>
    <label>Regulatory Reportable</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>