force-app/main/default/objects/Case/fields/Root_Cause_Category__c.field-meta.xml
<CustomField>
    <fullName>Root_Cause_Category__c</fullName>
    <label>Root Cause Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Mechanical</fullName>
            </value>
            <value>
                <fullName>Human</fullName>
            </value>
            <value>
                <fullName>Process</fullName>
            </value>
            <value>
                <fullName>External</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>