force-app/main/default/objects/Case/fields/Well__c.field-meta.xml
<CustomField>
    <fullName>Well__c</fullName>
    <label>Well</label>
    <referenceTo>Well__c</referenceTo>
    <relationshipName>Case_Well</relationshipName>
    <type>Lookup</type>
</CustomField>